# care-fusion-sentiment-detection-vi

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  goemotions.yaml  vsmec.yaml
data/: conflict_set.csv  goemotions_6groups.csv
data/raw/: goemotions.csv  vigoemotions_text_emoji_6groups.csv  vsmec.csv
docs/: CARE-Fusion_Experimental_Protocol.md  CARE-Fusion_Working_Draft.docx
notebooks/: CARE_Fusion_Colab.ipynb  CARE_Fusion_MultiDataset_A100.ipynb
scripts/: analyze_split.py  build_conflict_set.py  build_goemotions.py  build_paper_docx.py  build_vsmec.py  compute_multigroup.py  conflict_asymmetry.py  data_audit.py  emoji_amplify.py  eval_conflict_set.py  f5_sensitivity.py  get_goemotions.py  get_vsmec.py  inspect_router.py  list_conflict_cases.py  prepare_extra_datasets.py  q_entropy.py  quick_tfidf.py  run_all_datasets.py  run_emoji_amp_phobert.py  slice_summary.py  smoke_forward.py  stability_analysis.py  wilcoxon_overall.py
src/care_fusion/: __init__.py  baselines.py  data.py  engine.py  evaluate.py  experiments.py  losses.py  markers.py  model.py  preprocess.py  resources.py  train.py
tests/: test_markers.py
