[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "care-fusion"
version = "0.1.0"
description = "Regime-aware fusion of text and affective markers for Vietnamese emotion classification (ViGoEmotions)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
